# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import creatorsRouter from "./creators";
+import scriptsRouter from "./scripts";
+import accessRouter from "./access";
+import statsRouter from "./stats";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(creatorsRouter);
+router.use(scriptsRouter);
+router.use(accessRouter);
+router.use(statsRouter);
 
 export default router;
